--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Version: 0.0.0.9000
 Authors@R: 'Aksel A. Henriksen <a@b> [aut, cre]'
 Description: What the package does (one paragraph).
 Depends: R (>= 3.5.0)
+Imports: forecast
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
